--- a/demo/src/components/au-table/au-table-search/au-table-search.html
+++ b/demo/src/components/au-table/au-table-search/au-table-search.html
@@ -1,7 +1,7 @@
 <template>
     <div class="au-table-search">
         <input keyup.delegate="search() & debounce:500" 
-            value.bind="search_query" 
+            value.bind="parameters.search_query" 
             type="text" 
             placeholder.bind="placeholder" 
             class.bind="input_classes" />
