--- a/demo/src/app.scss
+++ b/demo/src/app.scss
@@ -17,6 +17,15 @@
     table {
         margin: 0;
 
+        thead {
+            .au-table-filter {
+                .btn-primary {
+                    padding: 1px 6px 2px 6px;
+                    border-radius: 0;
+                }
+            }
+        }
+
         tbody {
             tr {
                 &.selected {
@@ -33,8 +42,7 @@
                     background-color: #337ab7;
                     color: white !important;
                     cursor: pointer;
-                }
-                
+                }                
                 
                 td {
                     vertical-align: middle;
