--- a/demo/src/components/au-table/au-table-filter/au-table-filter.html
+++ b/demo/src/components/au-table/au-table-filter/au-table-filter.html
@@ -2,12 +2,12 @@
     <tr class="au-table-filter">
         <td class="au-filter-cell" repeat.for="i of amount_of_columns" if.bind="parameters">
             <div if.bind="should_generate_content(i)">
-                <input class="au-filter-input" value.bind="filter_values[i]" type="text">
+                <input class="au-filter-input" value.two-way="filter_values[i]" type="text" change.delegate="input_changed(i)">
                 <button class="au-filter-btn" click.delegate="show_filters($event)" class.bind="btn_classes">&#9783;</button>
                 <div class="au-filter-container">
                     <ul class="au-filters">
                         <li class="au-filter ${ is_selected_filter(filter, i) ? 'active': ''}" data-column="${i}" repeat.for="filter of filters" if.bind="should_add_filter(filter ,i)" click.delegate="select_filter($event, filter, i)"> ${ filter.description }</li>
-                        <li class="au-clear" click.delegate="clear_filter(i)">${ label_clear_filter } <span class="au-clear-icon">&#10006;</span></li>
+                        <li class="au-clear" click.delegate="clear_filter($event, i)">${ label_clear_filter } <span class="au-clear-icon">&#10006;</span></li>
                     </ul>
                 </div>
             </div>
@@ -35,25 +35,29 @@
 
             .au-table-filter .au-filter-container .au-filters {
                 list-style: none;
-                padding: 10px 10px;
+                padding: 10px;
                 border: 1px solid #ddd;
                 margin-top: 5px;
                 position: relative;
                 background-color: white;
                 top: 0;
                 bottom: 0;
+                font-size: 8pt;
                 right: 0;
                 margin-bottom: 0;
             }
 
             .au-table-filter .au-filter-container .au-filters .au-filter {
                 border-bottom: 1px solid #ddd;
-                padding: 2px 0px;
+                padding: 2px 5px;
             }
 
             .au-table-filter .au-filter-container .au-filters .au-clear {
                 margin-top: 20px;
                 font-size: 8pt;
+                padding: 2px 5px;
+                background: #333;
+                color: white;
             }
             
             .au-table-filter .au-filter-container .au-filters .au-clear:hover {
@@ -61,13 +65,13 @@
             }
 
             .au-table-filter .au-filter-container .au-filters .au-clear .au-clear-icon {
-                color: red;
+                color: white;
                 float: right;
                 margin-top: 1px;
             }
 
             .au-table-filter .au-filter-container .au-filters .au-filter.active {
-                background-color: #337ab7;
+                background-color: #b9b8b8;
                 color: white
             }
 
