--- a/demo/src/app.scss
+++ b/demo/src/app.scss
@@ -13,6 +13,25 @@
         border-left: 1px solid #ddd;
         border-right: 1px solid #ddd;
     }
+    
+    .form-control {
+        border-radius: 0;
+        outline: none;
+    }
+
+    select.form-control {
+		width: 100%;
+		height: 34px;                 
+		-webkit-appearance: none;
+		font-size: 9pt;
+		-moz-appearance: none;
+		background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='18' height='18' viewBox='0 0 24 24'><path fill='grey' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>") #fff;
+		background-position: 98% 50%;
+		background-repeat: no-repeat;
+		border-radius: 0;
+		border: 1px solid #cccccc;
+		padding: 2px 0 0 10px;
+	} 
 
     table {
         margin: 0;
@@ -79,6 +98,27 @@
                 margin: 0;
                 
                 li {
+                    a {                        
+                        border-radius: 0px;
+                        color: #333;        
+                    }
+
+                    &:hover {
+                        cursor: pointer;
+                    }                     
+                                            
+                    &.dots {
+                        cursor: none !important;
+                    }
+
+                    &.active {
+                        a {
+                            background-color: #333;
+                            border-color: #333;
+                            color: white;
+                        }
+                    }
+
                     &.dots {
                         cursor: default !important;
                         a {
@@ -89,6 +129,10 @@
                     }
                 }
             }
-        }  
+        } 
+    } 
+    
+    .nav-tabs {
+        margin-top: 50px;
     }
 }
