--- a/demo/src/app.scss
+++ b/demo/src/app.scss
@@ -6,6 +6,13 @@
         height: 30px;
         border-radius: 50%;
     }
+
+    .btn-primary {
+        background-color: #333;
+        color: white;
+        border-color: #333;
+        border-radius: 0px;
+    }
     
     .header {
         padding: 5px;
