--- a/docs/src/pages/client-side/html/html.scss
+++ b/docs/src/pages/client-side/html/html.scss
@@ -1,6 +1,7 @@
-#server-side-demo-container {
+#client-side-demo-container-html {
     padding: 30px;
-    
+    background-color: white;
+
     .nav-bar {
         margin-bottom: 20px;
 
