[progress] Wrote all documentation for the components and attributes

--- a/docs/src/pages/docs/docs.scss
+++ b/docs/src/pages/docs/docs.scss
@@ -1,5 +1,38 @@
 #docs {
-    padding: 50px 0;
+    padding: 20px;
+
+    .logos {
+        margin: 50px 0;
+        text-align: center;
+        
+        .logo-dtaalbers {
+            height: 150px;
+            margin-right: 25px;
+        }
+        
+        .logo-aurelia {
+            height: 150px;
+        }
+    }
+
+    .links {
+        list-style: none;
+        margin: 40px 0px;
+        text-align: center;
+
+        a {
+            width: 200px;
+            background-color: #ed682f;
+            padding: 10px 20px;
+            margin: 5px;
+            text-align: center;
+            color: white;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
 
     .page-header {
         text-align: center;
@@ -8,15 +41,23 @@
             list-style: none;
     
             li {
-                float: left;
-                width: 120px;
-                border: 1px solid #ed682f;
-                padding: 5px;
-                margin: 5px;
-                text-align: center;
 
                 a {
+                    float: left;
+                    width: 200px;
+                    border: 1px solid #ed682f;
+                    padding: 5px;
+                    margin: 5px;
+                    text-align: center;
+                    transition: .5s;
                     color: #ed682f;
+                    
+                    &:hover {
+                        cursor: pointer;
+                            background-color: #ed682f;
+                            text-decoration: none;
+                            color: white;
+                    }
                 }
             }
         }
@@ -35,6 +76,10 @@
             pre {
                 margin-bottom: 0;
                 color: #BD4145;
+
+                &.large-bottom {
+                    margin-bottom: -25px;
+                }
             }
         }
     }
