--- a/docs/src/pages/intro/intro.scss
+++ b/docs/src/pages/intro/intro.scss
@@ -5,6 +5,11 @@
     .header {
         font-size: 70pt;
         color: #333;
+
+        .sub {
+            font-size: 20pt;
+            margin-left: 30px;
+        }
     }
 
     .logos {
