[new] Added docs version

--- a/docs/src/pages/docs/docs.scss
+++ b/docs/src/pages/docs/docs.scss
@@ -1,6 +1,11 @@
 #docs {
     padding: 20px;
 
+    .docs-version {
+        margin: -20px 0 20px 0;
+        font-size: 8pt;
+    }
+
     .logos {
         margin: 50px 0;
         text-align: center;
