fix(*): Updated to latest aurelia plugin structure.
- Updated all packages to latest version.
- Changed all interfaces to classes (models).
- Fixed some wrong callback response types.

--- a/src/au-datatable.scss
+++ b/src/au-datatable.scss
@@ -1,4 +1,4 @@
 /** Import sass components **/
 
-@import './filter/filter';
-@import './pagination/pagination';
+@import './components/filter/filter';
+@import './components/pagination/pagination';
